--- a/css/style.css
+++ b/css/style.css
@@ -281,6 +281,30 @@ width: 270px;
   display: flex;
   justify-content: space-between;
 }
+
+.about-item{
+  position: relative;
+}
+
+.about-item-text{
+  height: 70px;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+  background: rgba(47, 48, 58, 0.8);
+
+  font-family: var(--main-font);
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--whitetext-color);
+    padding-top: 27px;
+    padding-bottom: auto;
+      }
+
 /* out team section */
 .team {
   background-color: #f5f4fa;
@@ -505,11 +529,17 @@ color: var(--whitetext-color);
   margin-left: 30px;
   margin-top: 30px;
   flex-basis: calc(100% / 3 - 30px);
+ 
 }
 
 .projects-link {
   text-decoration: none;
   display: block;
+   
+}
+.label{
+   position: relative;
+     overflow: hidden;
 }
 .projects-link:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -535,4 +565,36 @@ color: var(--whitetext-color);
   letter-spacing: 0.03em;
   color: var(--othertext-color);
   margin-top: 4px;
+}
+.project-label{
+  content: "";
+  display: flex;
+  align-items: center;
+  position: absolute;
+  width: 100%;
+  height: 294px;
+  top: 0;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  transform: translateY(150%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  
+}
+.project-label-text{
+  display: block;
+  padding-left: 24px;
+  padding-right: 24px;
+  font-family: var(--main-font);
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 1.56;
+    /* or 156% */
+  
+    letter-spacing: 0.03em;
+  
+    color:var(--whitetext-color);
+}
+
+.projects-item:hover .project-label{
+transform: translateY(0);
 }
