--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,12 @@ p {
   cursor: pointer;
   border: none;
   border-radius: 4px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .link {
   text-decoration: none;
   color: var(--maintext-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* header */
@@ -109,7 +111,10 @@ p {
 }
 .navigation-item {
   margin-right: 50px;
+  display: block;
 }
+
+
 .navigation-item:last-child {
   margin-right: 0;
 }
@@ -118,7 +123,30 @@ p {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
+  position: relative;
+  padding-bottom: 32px;
 }
+.index::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #2196F3;
+  border-radius: 2px;
+  bottom: 0;
+  }
+.portfolio::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 5px;
+  background-color: #2196F3;
+  border-radius: 2px;
+  bottom: 0;
+}
+
 .header-contacts {
   margin-left: auto;
   display: flex;
@@ -135,6 +163,7 @@ p {
 .contacts-icon{
   margin-right: 10px;
 fill: #757575;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
  .link:hover .contacts-icon,
  .link:focus .contacts-icon{
@@ -151,6 +180,8 @@ fill: #757575;
   align-items: center;
  }
 
+
+
  /* hero section */
 .hero {
   background-color: #2f303a;
@@ -158,13 +189,9 @@ fill: #757575;
   padding-bottom: 200px;
 }
 .overlay{
-background-image: linear-gradient(to right,rgba(47,
-  48,
-  58,
-  0.4), rgba(47,
-    48,
-    58,
-    0.4)), url(../images/img.jpg);
+background-image: linear-gradient(to right,rgba(47,48,58,0.4), 
+rgba(47,48,58,0.4)), 
+url(../images/img.jpg);
  max-width: 1600px;
 height: 600px;
 margin-left: auto;
@@ -358,9 +385,11 @@ gap: 10PX;
    background-color: var(--whitetext-color);
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-team{
   fill: #afb1b8;
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
  }
 
 .team-icon-link:hover,
@@ -390,9 +419,11 @@ gap: 10PX;
     display: flex;  
     align-items: center;
       justify-content: center;
+      transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
    }
 .client-item-logo{
   fill: #AFB1B8;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
      
 .client-item:hover, 
@@ -475,6 +506,7 @@ color: var(--whitetext-color);
   background-color:  rgba(255, 255, 255, 0.1);
   align-items: center;
   justify-content: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-footer {
   fill:var(--whitetext-color);
@@ -485,9 +517,56 @@ color: var(--whitetext-color);
   background-color: var(--linkcolor);
 }
 
-.footer-icon-link:hover .icon-team,
-.footer-icon-link:focus .icon-team {
-  fill: var(--whitetext-color);
+/* modal page */
+.backdrop{
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal {
+  width: 528px;
+  min-height: 581px;
+  background: #FFFFFF;
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.modal-close{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--whitetext-color);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;  
+  /* padding: 0;
+  display: block;
+  background-image: url(../images/icons/vectorold.svg);
+  background-position: center;
+  background-size: contain;
+  background-repeat: no-repeat; */
+}
+
+.is-hidden{
+ opacity: 0; 
+ visibility: hidden;
+ pointer-events: none;
+}
+
+.close-button {
+  fill:#000000;
 }
 
 /* portfolio page */
@@ -513,6 +592,7 @@ color: var(--whitetext-color);
   letter-spacing: 0.03em;
   color: var(--maintext-color);
   padding: 6px 22px;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-button:hover,
 .portfolio-button:focus{
@@ -535,7 +615,7 @@ color: var(--whitetext-color);
 .projects-link {
   text-decoration: none;
   display: block;
-   
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .label{
    position: relative;
@@ -576,7 +656,7 @@ color: var(--whitetext-color);
   top: 0;
   left: 0;
   background-color: rgba(33, 150, 243, 0.9);
-  transform: translateY(150%);
+  transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   
 }
@@ -589,11 +669,9 @@ color: var(--whitetext-color);
     font-size: 18px;
     line-height: 1.56;
     /* or 156% */
-  
     letter-spacing: 0.03em;
-  
     color:var(--whitetext-color);
-}
+  }
 
 .projects-item:hover .project-label{
 transform: translateY(0);
