--- a/css/style.css
+++ b/css/style.css
@@ -524,6 +524,7 @@ color: var(--whitetext-color);
   position: fixed;
   top: 0;
   background-color: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 1000ms cubic-bezier(0.4, 0, 0.2, 1);;
 }
 
 .modal {
@@ -535,7 +536,12 @@ color: var(--whitetext-color);
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%) scale(1) rotate(0);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden .modal{
+  transform: translate(0%, 0%) scale(0) rotate(-180deg);
 }
 
 .modal-close{
@@ -551,12 +557,7 @@ color: var(--whitetext-color);
   display: flex;
   align-items: center;
   justify-content: center;  
-  /* padding: 0;
-  display: block;
-  background-image: url(../images/icons/vectorold.svg);
-  background-position: center;
-  background-size: contain;
-  background-repeat: no-repeat; */
+  
 }
 
 .is-hidden{
